--- a/css/style.css
+++ b/css/style.css
@@ -531,7 +531,7 @@
     top: 280px;
     padding: 10px 35px;
     color: var(--bs-white);
-    background: var(--bs-primary);
+    background: #2cc2f6;
     border-radius: 50px;
     transition: 0.5s;
 }
@@ -1136,7 +1136,7 @@ iframe {
   
   .image-grid img {
     width: 100%;
-    height: auto;
+    height: 92%;
     border-radius: 5px;
   }
   
@@ -1263,8 +1263,8 @@ iframe {
     /*** Footer Start ***/
     .footer {
         background: var(--bs-dark);
-            width: 104%;
-    margin-left: -32px;
+            width: 100%;
+ 
     }
     .footer .container {
         max-width: 100%; /* Remove container constraints */
