--- a/css/style.css
+++ b/css/style.css
@@ -221,7 +221,7 @@
 
 .carousel .carousel-item,
 .carousel .carousel-item img {
-    height: 700px;
+    /* height: px; */
 }
 
 .carousel-item .carousel-caption {
@@ -230,7 +230,8 @@
     height: 100%;
     left: 0;
     bottom: 0;
-    background: rgba(0, 0, 0, .6);
+    /* background: rgba(0, 0, 0, .6); */
+    transition: transform 0.6s ease-in-out;
     display: flex;
     align-items: center;
 }
