--- a/css/style.css
+++ b/css/style.css
@@ -268,6 +268,27 @@
     }
 }
 
+
+/* Default display for desktop */
+.desktop-image {
+    display: block;
+}
+
+.mobile-image {
+    display: none;
+}
+
+/* Mobile view - Hide desktop images, show mobile images */
+@media (max-width: 767px) {
+    .desktop-image {
+        display: none;
+    }
+
+    .mobile-image {
+        display: block;
+    }
+}
+
 /*** Carousel Header End ***/
 
 /*** Single Page Hero Header Start ***/
@@ -1858,7 +1879,7 @@ iframe {
   
   @media (max-width: 768px) {
     .contact-icons {
-      top: 20%; /* Adjust placement for smaller screens */
+      top: 25%; /* Adjust placement for smaller screens */
       right: 10px;
     }
   
@@ -1873,3 +1894,5 @@ iframe {
     }
   }
   
+
+ 
