--- a/css/style.css
+++ b/css/style.css
@@ -1131,7 +1131,7 @@ iframe {
   padding: 20px;
   background-color: #fff; /* Matches the white background in your image */
   max-width: 1350px;
-  margin-left: 65px;
+  margin-left: 70px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2), 
               0 -1px 3px rgba(0, 0, 0, 0.1), 
               -1px 4px 3px rgba(0, 0, 0, 0.1), 
@@ -1189,7 +1189,7 @@ iframe {
   }
   
   .text-content p {
-    font-size: 1rem;
+    font-size: 0.85rem;
     line-height: 1.6;
     margin-bottom: 15px;
   }
@@ -1323,7 +1323,7 @@ iframe {
 
     .text-content {
         text-align: left; /* Align text to the left for readability */
-        font-size: 1rem;
+        font-size: 0.85rem;
     }
 
     .text-content h4 {
@@ -1337,7 +1337,7 @@ iframe {
     }
 
     .text-content p {
-        font-size: 0.95rem;
+        font-size: 0.85rem;
         line-height: 1.5;
     }
 }
@@ -1377,7 +1377,7 @@ iframe {
 
     .footer .footer-item a {
         line-height: 35px;
-        color: var(--bs-body);
+        color: #454545  ;
         transition: 0.5s;
     }
 
@@ -1586,7 +1586,7 @@ iframe {
     }
 
     .section-custom p {
-        font-size: 1rem;
+        font-size: 0.85rem;
         font-weight: 500;
     }
 }
@@ -1606,7 +1606,7 @@ iframe {
     }
 
     .description-custom {
-        font-size: 1rem;
+        font-size: 0.85rem;
         line-height: 1.6;
         text-align: justify;
         margin-bottom: 15px;
@@ -1889,8 +1889,7 @@ iframe {
 
   .director-banner {
     display: block; /* Default display for desktop */
-    width: 112%;
-    margin-left: -78px;
+    width: 100%;
     height: auto;
 }
 
