--- a/css/style.css
+++ b/css/style.css
@@ -1189,7 +1189,7 @@ iframe {
   }
   
   .text-content p {
-    font-size: 0.85rem;
+    font-size: 0.95rem;
     line-height: 1.6;
     margin-bottom: 15px;
   }
@@ -1216,7 +1216,7 @@ iframe {
   .unique-quote-form-section {
     flex: 1 1 50%;
     padding: 20px;
-    /* margin-top: -51px; */
+    margin-top: 20px;
   }
   
   .unique-quote-appointment-title {
@@ -1286,7 +1286,9 @@ iframe {
     color: #555;
     font-weight: 500;
   }
-  
+  .ph-icon{
+    transform: rotate(-788deg);
+}
   
   @media only screen and (max-width: 768px) {
     .why-choose-section {
@@ -1304,9 +1306,7 @@ iframe {
         flex-direction: column; /* Stack content vertically */
         gap: 20px;
     }
-    .ph-icon{
-        transform: rotate(-423deg);
-    }
+ 
    
 
     .image-grid {
@@ -1951,10 +1951,10 @@ iframe {
     align-items: center;
     justify-content: center;
     font-size: 18px; /* Font size for phone number */
-    gap: 8px;
+    gap: 4px;
     writing-mode: vertical-rl; 
     color: white; /* White text color */
-    padding: 10px;
+    /* padding: 10px; */
     border-radius: 5px; /* Slightly rounded corners */
     text-decoration: none; /* Remove underline */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Add shadow effect */
