--- a/css/style.css
+++ b/css/style.css
@@ -2158,8 +2158,8 @@ iframe {
     top: 0;
     left: 0;
     width: 100%;
-    height: 55%;
-    background-color: rgba(0, 0, 0, 0.5); /* Black overlay with 50% opacity */
+    height: 69%;
+    /* background-color: rgba(112, 108, 108, 0.5);  */
     z-index: 1;
 }
 
@@ -2695,7 +2695,9 @@ iframe {
   border: 0; /* Removes the default border around the iframe */
 }
 
-
+.rohaan{
+    color: #ffffff !important;
+}
 
 /* Mobile Responsive Adjustments */
 @media (max-width: 768px) {
